[project]
name = "harvesters-gui"
version = "1.1.0"
description = "Graphical user interfce of Harvester"
authors = [
  { name = "The GenICam Committee", email = "genicam@list.stemmer-imaging.com" },
]
dependencies = [
    "qtpy>=2.4.1",
    "vispy>=0.14.3",
    "harvesters>=1.4.3",
    "pyopengl>=3.1.7",
]
readme = "README.md"
license-files = { paths = ["LICENSE.txt"] }
requires-python = ">= 3.8, < 3.12"
classifiers = [
  'Development Status :: 3 - Alpha',
  'Intended Audience :: Science/Research',
  'Intended Audience :: Education',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: Apache Software License',
  'Operating System :: MacOS :: MacOS X',
  'Operating System :: Microsoft :: Windows',
  'Operating System :: POSIX',
  'Programming Language :: Python :: 3.5',
  'Programming Language :: Python :: 3.6',
  'Programming Language :: Python :: 3.7',
  'Programming Language :: Python :: 3.8',
]

[project.urls]
"Source Code" = "https://github.com/genicam/harvesters_gui"

[project.gui-scripts]
harvesters_gui = "harvesters_gui.app.mainwindow:main_gui"

[project.optional-dependencies]
pyqt6 = ["pyqt6>=6.7.1"]
pyside6 = ["pyside6>=6.7.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
universal = true
dev-dependencies = ["sphinx>=7.4.7"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/harvesters_gui"]
